<resources>

    <string name="app_name">SimpleKnowledgeBase</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">0 entries</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- nav app bar top -->
    <string name="action_settings_Export">Export Database</string>
    <string name="action_settings_Import">Import Database</string>

    <!-- mobile_navigation.xml -->
    <string name="menu_home">Home</string>
    <string name="menu_advancedSearch">Advanced Search</string>
    <string name="menu_addEntry">Add Entry</string>
    <string name="menu_Category">Category Overview</string>

    <!-- fragment_keyword_search.xml -->
    <string name="keyword_btn_search">Search</string>
    <string name="keyword_et_search">search keyword</string>
    <string name="keyword_btn_addEntry">Add Entry</string>
    <string name="keyword_btn_advancedSearch">Advanced</string>
    <string name="keyword_btn_categoryOverview">Categories</string>

    <!-- fragment_keyword_recycler_view.xml -->
    <string name="keyword_rec_view_btn_openSource">Open Source</string>

    <!-- fragment_add_entry.xml -->
    <string name="addentry_btn_addentry">Add entry</string>
    <string name="addentry_btn_to_keyword">Home</string>
    <string name="addentry_btn_clipboardDescription">Copy desc from clipboard</string>
    <string name="addentry_btn_clipboardSource">Copy src from clipboard</string>

    <!-- fragment_dialog_export_database -->
    <string name="export_tv_title">Export database</string>
    <string name="export_tv_description">Your database will be exported \nto your Downloads directory</string>
    <string name="export_btn_cancel">Cancel</string>
    <string name="export_btn_okay">Okay</string>

    <!-- fragment_dialog_import_database -->
    <string name="import_tv_title">Import database</string>
    <string name="import_tv_description">\n- Expected delimiter = ;\n- Expected escape character / \n- Expected columns: Title, Category, Description, Source\n- Expected column size: 4</string>
    <string name="import_btn_cancel">Cancel</string>
    <string name="import_btn_okay">Okay</string>
    <string name="import_btn_DontShowAgain">Dont show this again</string>

    <!-- fragment_advanced_search -->
    <string name="advancedSearch_rb_DateSearch">Search by date</string>
    <string name="advancedSearch_rb_ByTextField">Search by text field</string>
    <string name="advancedSearch_btn_Search">Search</string>
    <string name="advancedSearch_btn_Clear">Clear</string>
    <string name="advancedSearch_tv_dateStart">Start date</string>
    <string name="advancedSearch_tv_dateEnd">End date</string>

    <!-- advancedSearch_spinner_SearchbyTextField -->
    <string-array name="advancedSearch_spinner_SearchbyTextField">
        <item>Title</item>
        <item>Description</item>
        <item>Source-URL</item>
    </string-array>

    <!-- ImportDatabase -->
    <string name="importFinishedMessage">CSV imported!</string>
    <string name="importErrorMessage">Import failed!</string>
    <string name="titleMax">50</string> <!-- currently not in use: hading problem to include ints from here in a .kt file-->
    <string name="categoryMax">20</string> <!-- currently not in use -->
    <string name="descriptionMax">500</string> <!-- currently not in use -->
    <string name="sourceMax">400</string> <!-- currently not in use -->


</resources>