<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/activity_main_drawer">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/categoryOverviewFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Category" />
        <item
            android:id="@+id/nav_advanced_search"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_advancedSearch" />
        <item
            android:id="@+id/nav_add_entry"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_addEntry" />
    </group>
</menu>