<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <action
        android:id="@+id/action_to_importDatabaseDialogFragment"
        app:destination="@id/importDatabaseDialogFragment" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.simpleknowledgebase.fragments.KeywordSearchFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_keyword_search" >
        <action
            android:id="@+id/action_nav_home_to_nav_add_entry"
            app:destination="@id/nav_add_entry" />
        <action
            android:id="@+id/action_nav_home_to_nav_advanced_search"
            app:destination="@id/nav_advanced_search" />
        <action
            android:id="@+id/action_nav_home_to_updateDeleteEntryFragment"
            app:destination="@id/updateDeleteEntryFragment" />
        <action
            android:id="@+id/action_nav_home_to_categoryOverviewFragment"
            app:destination="@id/nav_categoryOverviewFragment" />
        <action
            android:id="@+id/action_nav_home_to_importDatabaseDialogFragment"
            app:destination="@id/importDatabaseDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_advanced_search"
        android:name="com.example.simpleknowledgebase.fragments.AdvancedSearchFragment"
        android:label="@string/menu_advancedSearch"
        tools:layout="@layout/fragment_advanced_search" >

        <argument
            android:name="nav_advanced_search"
            app:argType="string"
            android:defaultValue="AdvancedSearchFragment"/>

        <action
            android:id="@+id/action_nav_advanced_search_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_advanced_search_to_nav_add_entry"
            app:destination="@id/nav_add_entry" />
        <action
            android:id="@+id/action_nav_advanced_search_to_updateDeleteEntryFragment"
            app:destination="@id/updateDeleteEntryFragment" />
        <action
            android:id="@+id/action_nav_advanced_search_to_categoryOverviewFragment"
            app:destination="@id/nav_categoryOverviewFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_entry"
        android:name="com.example.simpleknowledgebase.fragments.AddEntryFragment"
        android:label="@string/menu_addEntry"
        tools:layout="@layout/fragment_add_entry" >
        <action
            android:id="@+id/action_nav_add_entry_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_add_entry_to_nav_advanced_search"
            app:destination="@id/nav_advanced_search" />
        <action
            android:id="@+id/action_nav_add_entry_to_updateDeleteEntryFragment"
            app:destination="@id/updateDeleteEntryFragment" />
        <action
            android:id="@+id/action_nav_add_entry_to_categoryOverviewFragment"
            app:destination="@id/nav_categoryOverviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateDeleteEntryFragment"
        android:name="com.example.simpleknowledgebase.fragments.UpdateDeleteEntryFragment"
        android:label="UpdateDeleteEntryFragment" >
        <action
            android:id="@+id/action_updateDeleteEntryFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_updateDeleteEntryFragment_to_nav_add_entry"
            app:destination="@id/nav_add_entry" />
        <action
            android:id="@+id/action_updateDeleteEntryFragment_to_nav_advanced_search"
            app:destination="@id/nav_advanced_search" />
        <action
            android:id="@+id/action_updateDeleteEntryFragment_to_categoryOverviewFragment"
            app:destination="@id/nav_categoryOverviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_categoryOverviewFragment"
        android:name="com.example.simpleknowledgebase.fragments.CategoryOverviewFragment"
        android:label="CategoryOverviewFragment" >
        <action
            android:id="@+id/action_categoryOverviewFragment_to_nav_advanced_search"
            app:destination="@id/nav_advanced_search" />
        <action
            android:id="@+id/action_categoryOverviewFragment_to_updateDeleteEntryFragment"
            app:destination="@id/updateDeleteEntryFragment" />
        <action
            android:id="@+id/action_categoryOverviewFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_categoryOverviewFragment_to_nav_add_entry"
            app:destination="@id/nav_add_entry" />
    </fragment>
    <dialog
        android:id="@+id/importDatabaseDialogFragment"
        android:name="com.example.simpleknowledgebase.fragments.ImportDatabaseDialogFragment"
        android:label="ImportDatabaseDialogFragment" >
        <action
            android:id="@+id/action_importDatabaseDialogFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </dialog>


</navigation>